// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rules Cell Modifiers parses a rule with a variable that begins with the name of a modifier 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 52,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 54,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 55,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "stationaryz",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "stationaryz",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 48,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 50,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "ACTION",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 2`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 43,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 45,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "^",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 3`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 43,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 45,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "V",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 4`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 43,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 45,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": ">",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 5`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 43,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 45,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "<",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 6`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 46,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 48,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "LEFT",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 7`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 47,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 49,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "RIGHT",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 8`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 44,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 46,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "UP",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 9`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 46,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 48,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "DOWN",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 10`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 52,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 54,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "STATIONARY",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 11`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 48,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 50,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "MOVING",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 12`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 50,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 52,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "VERTICAL",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 13`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 52,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 54,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "HORIZONTAL",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 14`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 55,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 57,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "PERPENDICULAR",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 15`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 52,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 54,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "ORTHOGONAL",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with directions 16`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 51,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 53,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": "RANDOMDIR",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with modifiers 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 45,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 47,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": undefined,
                  "isNegated": true,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Cell Modifiers parses a rule with modifiers 2 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 53,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 55,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 56,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": "STATIONARY",
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Commands parses a rule with a command inside the brackets (these should be moved up to the Action Commands) 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 39,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 40,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 40,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "SFX0",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Commands parses a rule with a command inside the brackets (these should be moved up to the Action Commands) 2`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 39,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 40,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 40,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
                {
                  "_sourceOffset": 42,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "SFX1",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Commands parses a rule with a command inside the brackets (these should be moved up to the Action Commands) 3`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 39,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 40,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 40,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
                {
                  "_sourceOffset": 42,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "winter",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules Commands parses a rule with a command inside the brackets (these should be moved up to the Action Commands) 4`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 41,
          "againHack": true,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 43,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
            {
              "_sourceOffset": 44,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 44,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
            {
              "_sourceOffset": 37,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules General Formatting Correctly parses weird variable names 1`] = `
{
  "collisionLayers": [],
  "legendItems": [
    {
      "_sourceOffset": 28,
      "name": "Bush?",
      "tile": "Player",
      "type": "LEGEND_ITEM_SIMPLE",
    },
    {
      "_sourceOffset": 43,
      "name": ".",
      "tile": "Player",
      "type": "LEGEND_ITEM_SIMPLE",
    },
  ],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 73,
      "actions": [
        {
          "_sourceOffset": 83,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 85,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 85,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "Bush?",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 73,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 74,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 74,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "Bush?",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
    {
      "_sourceOffset": 92,
      "actions": [
        {
          "_sourceOffset": 98,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 100,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 100,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": ".",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 92,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 93,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 93,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": ".",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "foo",
  "winConditions": [],
}
`;

exports[`rules RANDOM keyword propagation does not mark a rule Loop as being RANDOM 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "rules": [
        {
          "_sourceOffset": 45,
          "rules": [
            {
              "_sourceOffset": 45,
              "actions": [
                {
                  "_sourceOffset": 58,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 60,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 52,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 53,
                      "debugFlag": null,
                      "tileWithModifiers": [
                        {
                          "_sourceOffset": 53,
                          "direction": null,
                          "isNegated": false,
                          "isRandom": false,
                          "tile": ".",
                          "type": "TILE_WITH_MODIFIER",
                        },
                      ],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [],
              "isLate": false,
              "isRandom": true,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
            {
              "_sourceOffset": 63,
              "actions": [
                {
                  "_sourceOffset": 75,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 77,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 64,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 65,
                      "debugFlag": null,
                      "tileWithModifiers": [
                        {
                          "_sourceOffset": 65,
                          "direction": null,
                          "isNegated": false,
                          "isRandom": false,
                          "tile": "Player",
                          "type": "TILE_WITH_MODIFIER",
                        },
                      ],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [],
              "isLate": false,
              "isRandom": false,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
          ],
          "type": "RULE_GROUP",
        },
      ],
      "type": "RULE_LOOP",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules RANDOM keyword propagation marks a rule Group as being RANDOM 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 35,
      "rules": [
        {
          "_sourceOffset": 35,
          "actions": [
            {
              "_sourceOffset": 48,
              "againHack": false,
              "debugFlag": null,
              "neighbors": [
                {
                  "_sourceOffset": 50,
                  "tileWithModifiers": [],
                  "type": "NEIGHBOR",
                },
              ],
              "type": "BRACKET_SIMPLE",
            },
          ],
          "commands": [],
          "conditions": [
            {
              "_sourceOffset": 42,
              "againHack": false,
              "debugFlag": null,
              "neighbors": [
                {
                  "_sourceOffset": 43,
                  "debugFlag": null,
                  "tileWithModifiers": [
                    {
                      "_sourceOffset": 43,
                      "direction": null,
                      "isNegated": false,
                      "isRandom": false,
                      "tile": ".",
                      "type": "TILE_WITH_MODIFIER",
                    },
                  ],
                  "type": "NEIGHBOR",
                },
              ],
              "type": "BRACKET_SIMPLE",
            },
          ],
          "directions": [],
          "isLate": false,
          "isRandom": true,
          "isRigid": false,
          "type": "RULE_SIMPLE",
        },
        {
          "_sourceOffset": 53,
          "actions": [
            {
              "_sourceOffset": 65,
              "againHack": false,
              "debugFlag": null,
              "neighbors": [
                {
                  "_sourceOffset": 67,
                  "tileWithModifiers": [],
                  "type": "NEIGHBOR",
                },
              ],
              "type": "BRACKET_SIMPLE",
            },
          ],
          "commands": [],
          "conditions": [
            {
              "_sourceOffset": 54,
              "againHack": false,
              "debugFlag": null,
              "neighbors": [
                {
                  "_sourceOffset": 55,
                  "debugFlag": null,
                  "tileWithModifiers": [
                    {
                      "_sourceOffset": 55,
                      "direction": null,
                      "isNegated": false,
                      "isRandom": false,
                      "tile": "Player",
                      "type": "TILE_WITH_MODIFIER",
                    },
                  ],
                  "type": "NEIGHBOR",
                },
              ],
              "type": "BRACKET_SIMPLE",
            },
          ],
          "directions": [],
          "isLate": false,
          "isRandom": false,
          "isRigid": false,
          "type": "RULE_SIMPLE",
        },
      ],
      "type": "RULE_GROUP",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules RANDOM keyword propagation marks a rule as being RANDOM 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 47,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 49,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 41,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 42,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 42,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": ".",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": true,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules RANDOM keyword propagation properly groups loops and groups 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 35,
      "actions": [
        {
          "_sourceOffset": 47,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 49,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 41,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 42,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [
        "RIGHT",
      ],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
    {
      "rules": [
        {
          "_sourceOffset": 78,
          "rules": [
            {
              "_sourceOffset": 78,
              "actions": [
                {
                  "_sourceOffset": 90,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 92,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 84,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 85,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [
                "RIGHT",
              ],
              "isLate": false,
              "isRandom": false,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
            {
              "_sourceOffset": 96,
              "actions": [
                {
                  "_sourceOffset": 109,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 111,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 103,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 104,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [
                "RIGHT",
              ],
              "isLate": false,
              "isRandom": false,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
            {
              "_sourceOffset": 115,
              "actions": [
                {
                  "_sourceOffset": 128,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 130,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 122,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 123,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [
                "RIGHT",
              ],
              "isLate": false,
              "isRandom": false,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
            {
              "_sourceOffset": 135,
              "actions": [
                {
                  "_sourceOffset": 148,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 150,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 142,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 143,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [
                "RIGHT",
              ],
              "isLate": false,
              "isRandom": false,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
          ],
          "type": "RULE_GROUP",
        },
        {
          "_sourceOffset": 171,
          "rules": [
            {
              "_sourceOffset": 171,
              "actions": [
                {
                  "_sourceOffset": 183,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 185,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 177,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 178,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [
                "RIGHT",
              ],
              "isLate": false,
              "isRandom": false,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
            {
              "_sourceOffset": 189,
              "actions": [
                {
                  "_sourceOffset": 202,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 204,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "commands": [],
              "conditions": [
                {
                  "_sourceOffset": 196,
                  "againHack": false,
                  "debugFlag": null,
                  "neighbors": [
                    {
                      "_sourceOffset": 197,
                      "tileWithModifiers": [],
                      "type": "NEIGHBOR",
                    },
                  ],
                  "type": "BRACKET_SIMPLE",
                },
              ],
              "directions": [
                "RIGHT",
              ],
              "isLate": false,
              "isRandom": false,
              "isRigid": false,
              "type": "RULE_SIMPLE",
            },
          ],
          "type": "RULE_GROUP",
        },
        {
          "_sourceOffset": 208,
          "actions": [
            {
              "_sourceOffset": 220,
              "againHack": false,
              "debugFlag": null,
              "neighbors": [
                {
                  "_sourceOffset": 222,
                  "tileWithModifiers": [],
                  "type": "NEIGHBOR",
                },
              ],
              "type": "BRACKET_SIMPLE",
            },
          ],
          "commands": [],
          "conditions": [
            {
              "_sourceOffset": 214,
              "againHack": false,
              "debugFlag": null,
              "neighbors": [
                {
                  "_sourceOffset": 215,
                  "tileWithModifiers": [],
                  "type": "NEIGHBOR",
                },
              ],
              "type": "BRACKET_SIMPLE",
            },
          ],
          "directions": [
            "RIGHT",
          ],
          "isLate": false,
          "isRandom": false,
          "isRigid": false,
          "type": "RULE_SIMPLE",
        },
      ],
      "type": "RULE_LOOP",
    },
    {
      "_sourceOffset": 233,
      "actions": [
        {
          "_sourceOffset": 245,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 247,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 239,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 240,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [
        "RIGHT",
      ],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a rule with a _ for a variable name 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 42,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 44,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z_x",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a rule with a period for a variable name 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 40,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 42,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": ".",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a rule with ellpisis 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 56,
          "afterNeighbors": [
            {
              "_sourceOffset": 75,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 76,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "x",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
            {
              "_sourceOffset": 79,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "beforeNeighbors": [
            {
              "_sourceOffset": 58,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 59,
                  "direction": undefined,
                  "isNegated": false,
                  "isRandom": true,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "debugFlag": null,
          "type": "BRACKET_ELLIPSIS",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "afterNeighbors": [
            {
              "_sourceOffset": 45,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 46,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "x",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
            {
              "_sourceOffset": 49,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 50,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "beforeNeighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "debugFlag": null,
          "type": "BRACKET_ELLIPSIS",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a rule with multiple cells 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 46,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 48,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
            {
              "_sourceOffset": 50,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
            {
              "_sourceOffset": 39,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 40,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "x",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a rule with multiple layers 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 44,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 46,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
                {
                  "_sourceOffset": 38,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "x",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a simple rule 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 42,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 44,
              "tileWithModifiers": [],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a simple rule 2 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 42,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 44,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 45,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 36,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;

exports[`rules parses a simple rule without whitespace 1`] = `
{
  "collisionLayers": [],
  "legendItems": [],
  "levels": [],
  "metadata": [],
  "rules": [
    {
      "_sourceOffset": 34,
      "actions": [
        {
          "_sourceOffset": 39,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 40,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 40,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "commands": [],
      "conditions": [
        {
          "_sourceOffset": 34,
          "againHack": false,
          "debugFlag": null,
          "neighbors": [
            {
              "_sourceOffset": 35,
              "debugFlag": null,
              "tileWithModifiers": [
                {
                  "_sourceOffset": 35,
                  "direction": null,
                  "isNegated": false,
                  "isRandom": false,
                  "tile": "z",
                  "type": "TILE_WITH_MODIFIER",
                },
              ],
              "type": "NEIGHBOR",
            },
          ],
          "type": "BRACKET_SIMPLE",
        },
      ],
      "directions": [],
      "isLate": false,
      "isRandom": false,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
  ],
  "sounds": [],
  "sprites": [],
  "title": "checkGrammar",
  "winConditions": [],
}
`;
